# TransFile

./: config.toml  pyproject.toml  start.py  start.spec
src/: __init__.py  config.py  main.py
src/task/: task_manager.py
src/task/tasks/: video_convert.py
src/webio/: main.py  page_manager.py  page_templet.py
src/webio/pages/: __init__.py  home.py  progress.py  video.py
trans-file-web/: package-lock.json  package.json  vite.config.mts
trans-file-web/src/: App.vue
trans-file-web/src/components/: HelloWorld.vue
