[tool.poetry]
name = "transfile"
version = "0.1.0"
description = ""
authors = ["hsn <hsn1919810@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
eel = "^0.16.0"
ffmpeg-python = "^0.2.0"
pyinstaller = "^6.6.0"
pywebview = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
